--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -173,10 +173,12 @@ body
   margin-block: 8rem
   margin-right: 10vw
   max-width: 60rem
-  line-height: 1.4
+  line-height: 1.5
   h1, h2, h3, h4, h5, h6
     margin-top: 2rem
     margin-bottom: 0.6rem
+  p
+    margin-block: 1rem
   ul
     margin-left: 1.2rem
   pre
